@@ -31,6 +31,9 @@
 20. daemontools.spec, debian/control: use libqmail-devel > 1.3 for
     pathexec_env_plus() function in libqmail
 21. envdir.c: added -p option to set PATH variable before the call to execve
+- 14/11/2024
+22. supervise.c: use envdir to set environment variables if variable directory
+    exists
 
 * Tue Aug 06 2024 12:48:42 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.5-1.1%{?dist}
 Release 1.1.5-1.1 Start 05/02/2024 End 06/08/2024
